Fix z-index issue with submenus (fixes #88)

--- a/src/sass/_menus.scss
+++ b/src/sass/_menus.scss
@@ -188,6 +188,7 @@
                 position: absolute;
                 box-shadow: $level1;
                 min-width: 100%;
+				z-index: 10;
             }
             
             ul a {
